# ai_news_agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  crv_content_distribution.json  findings.md  progress.md  task_plan.md
.agent/memory/: INDEX.md  PROFILE.md
.agent/skills/: advanced-evaluation  algorithmic-art  anti-ai-writing  bdi-mental-states  brainstorming  brand-guidelines  canvas-design  context-compression  context-degradation  context-fundamentals  context-optimization  dispatching-parallel-agents  doc-coauthoring  docx  evaluation  executing-plans  filesystem-context  finishing-a-development-branch  frontend-design  hosted-agents  internal-comms  json-canvas  mcp-builder  memory-systems  multi-agent-patterns  obsidian-bases  obsidian-markdown  pdf  pptx  project-development  receiving-code-review  (+16 more)
agent-engineer/: .gitignore  AGENTS.md  README.md
ai_news_agent/: .gitignore  README.md  pyproject.toml
ai_news_agent/.github/workflows/: daily_news.yml  daily_report.yml
ai_news_agent/src/ai_news_agent/: crew.py  main.py
ai_news_agent/src/ai_news_agent/config/: agents.yaml  tasks.yaml
ai_news_agent/src/ai_news_agent/tools/: __init__.py  hackernews_tool.py  push_tool.py  twitter_tool.py
media_dashboard/: package-lock.json  package.json
workspace/: workspace_cleanup_review_2026-02-24.md
公司业务相关/: INDEX.md
文案部/: .DEV_LOG.md  26-2月-【东风本田】-AIGC内容执行 (1).xlsx  IMPLEMENTATION_SUMMARY.md  PROJECT_ARCHITECTURE.md  PROJECT_HANDOVER.md  README.md  config.py  run_streamlit.sh  scene_rag.py  swarm_with_llm.py  test_writer_output.txt  web_ui.py  项目总览.md
(+291 files in other folders)
